--- a/app/styles/basic/_variables.scss
+++ b/app/styles/basic/_variables.scss
@@ -53,11 +53,11 @@ $line-height-base: 1.4;
 
 //брейкпоинты//
 //Mobile First//
-$xlg-point-mf: "(min-width: 1600px)";
-$lg-point-mf: "(min-width: 1200px)";
-$md-point-mf: "(min-width: 992px)";
-$sm-point-mf: "(min-width: 768px)";
-$xs-point-mf: "(min-width: 540px)";
+$xxlg-point-mf: "(min-width: 1600px)";
+$xlg-point-mf: "(min-width: 1200px)";
+$lg-point-mf: "(min-width: 992px)";
+$md-point-mf: "(min-width: 768px)";
+$sm-point-mf: "(min-width: 540px)";
 
 //Desktop First//
 $xlg-point-df: "(max-width: 1600px)";
