--- a/app/styles/layout/_works.scss
+++ b/app/styles/layout/_works.scss
@@ -72,6 +72,7 @@
   flex-flow: row wrap;
   justify-content: flex-start;
   margin-bottom: 4rem;
+  transition: 0.5s;
 }
 .works__gallery-item {
   position: relative;
