--- a/app/templates/layout/_auth.pug
+++ b/app/templates/layout/_auth.pug
@@ -1,9 +1,9 @@
 section.auth
   .auth__bg
     picture
-      source(type="image/webp" srcset="img/bg/forest-desktop.webp 1x, img/bg/forest-desktop.webp 2x")
-      img(src="img/bg/forest-desktop.jpg" srcset="img/bg/forest-desktop.jpg 2x"
-      alt="wecolme background", class="auth__bg-img")
+      source(type="image/webp" srcset="img/bg/forest-desctop@1x.webp 1x, img/bg/forest-desctop@2x.webp 2x")
+      img(src="img/bg/forest-desctop@1x.jpg" srcset="img/bg/forest-desctop@2x.jpg 2x"
+        alt="auth background", class="auth__bg-img")
   .auth__box
     .auth__box-inner
       .auth__info
