--- a/app/templates/layout/_welcome.pug
+++ b/app/templates/layout/_welcome.pug
@@ -3,8 +3,8 @@ include ../blocks/_user
 section.welcome
   .welcome__bg
     picture
-      source(type="image/webp" srcset="img/bg/forest-desktop.webp 1x, img/bg/forest-desktop.webp 2x")
-      img(src="img/bg/forest-desktop.jpg" srcset="img/bg/forest-desktop.jpg 2x"
+      source(type="image/webp" srcset="img/bg/forest-desctop@1x.webp 1x, img/bg/forest-desctop@2x.webp 2x")
+      img(src="img/bg/forest-desctop@1x.jpg" srcset="img/bg/forest-desctop@2x.jpg 2x"
        alt="wecolme background", class="welcome__bg-img")
   .welcome__box
     .welcome__box-inner
