--- a/app/styles/blocks/_arrow-down.scss
+++ b/app/styles/blocks/_arrow-down.scss
@@ -13,4 +13,8 @@
   display: block;
   fill: rgba(#ffffff, 0.7);
   transition: 0.2s ease;
+  svg {
+    width: 2.7rem;
+    height: 2.7rem;
+  }
 }
