--- a/app/styles/blocks/_socials.scss
+++ b/app/styles/blocks/_socials.scss
@@ -18,6 +18,7 @@
   display: block;
   height: 100%;
   text-decoration: none;
+  line-height: 0;
   cursor: pointer;
   transition: 0.2s ease;
   svg {
@@ -39,6 +40,10 @@
 .socials__icon {
   display: inline-block;
   font-size: 0;
+  svg {
+    width: 3rem;
+    height: 3rem;
+  }
 }
 .socials--footer {
   justify-content: flex-start;
