add section works

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -33,6 +33,8 @@
 @import "blocks/_skills.scss";
 @import "blocks/_circles.scss";
 @import "blocks/_contacts.scss";
+@import "blocks/_gallery.scss";
+@import "blocks/_filters.scss";
 
 
 // layout-секции //
