--- a/app/styles/blocks/_user.scss
+++ b/app/styles/blocks/_user.scss
@@ -60,3 +60,15 @@
   line-height: 2.4rem;
   color: rgba(255, 255, 255, 0.8);
 }
+
+@include tablets-df {
+  .user--full {
+    padding: 0 5rem;
+  }
+}
+@include phones-df {
+  .user--full {
+    padding: 0 2rem;
+  }
+}
+
