--- a/app/styles/blocks/_page.scss
+++ b/app/styles/blocks/_page.scss
@@ -62,11 +62,30 @@
   }
 }
 .page-text {
-  text-align: left;
   font-size: 1.6rem;
   line-height: 2.4rem;
+  text-align: justify;
   color: #566358;
   &:not(:last-child) {
     margin-bottom: 2rem;
   }
+}
+@include tablets-df {
+  .page-title {
+    padding-top: 3.5rem;
+    padding-bottom: 2rem;
+    margin-bottom: 2rem;
+  }
+  .page-subtitle {
+    padding-top: 2rem;
+  }
+  .page-text {
+    font-size: 1.8rem;
+    &:not(:last-child) {
+      margin-bottom: 1rem;
+    }
+  }
+}
+@include phones-df {
+
 }
