--- a/app/styles/blocks/_socials.scss
+++ b/app/styles/blocks/_socials.scss
@@ -11,7 +11,7 @@
   vertical-align: middle;
   font-size: 1rem;
   &:not(:last-child) {
-    margin-right: 2.8rem;
+    margin-right: 4rem;
   }
 }
 .socials__link {
@@ -59,5 +59,9 @@
     &:hover svg {
       fill: rgba(255, 255, 255, 1);
     }
+  }
+  & .socials__icon svg {
+    width: 2.5rem;
+    height: 2.5rem;
   }
 }
