--- a/app/templates/layout/_works.pug
+++ b/app/templates/layout/_works.pug
@@ -21,7 +21,7 @@ section.works
     .works__gallery
       .gallery
         ul.gallery__list.gallery__list--no-mix
-          li.gallery__item.mix.landing
+          li.gallery__item.landing
             .gallery__item-pict
               picture
                 source(type="image/webp"
@@ -33,7 +33,7 @@ section.works
               a(href="#").btn.gallery__btn.gallery__btn--cover
                 +icon("gallery__btn-icon", "link", 14)
                 |Посмотреть сайт    
-          li.gallery__item.mix.shops
+          li.gallery__item.shops
             .gallery__item-pict
               picture
                 source(type="image/webp"
@@ -45,7 +45,7 @@ section.works
               a(href="#").btn.gallery__btn.gallery__btn--cover
                 +icon("gallery__btn-icon", "link", 14)
                 |Посмотреть сайт 
-          li.gallery__item.mix.landing
+          li.gallery__item.landing
             .gallery__item-pict
               picture
                 source(type="image/webp"
@@ -57,7 +57,7 @@ section.works
               a(href="#").btn.gallery__btn.gallery__btn--cover
                 +icon("gallery__btn-icon", "link", 14)
                 |Посмотреть сайт     
-          li.gallery__item.mix.landing
+          li.gallery__item.landing
             .gallery__item-pict
               picture
                 source(type="image/webp"
@@ -69,7 +69,7 @@ section.works
               a(href="#").btn.gallery__btn.gallery__btn--cover
                 +icon("gallery__btn-icon", "link", 14)
                 |Посмотреть сайт        
-          li.gallery__item.mix.landing
+          li.gallery__item.landing
             .gallery__item-pict
               picture
                 source(type="image/webp"
@@ -81,7 +81,7 @@ section.works
               a(href="#").btn.gallery__btn.gallery__btn--cover
                 +icon("gallery__btn-icon", "link", 14)
                 |Посмотреть сайт         
-          li.gallery__item.mix.shops
+          li.gallery__item.shops
             .gallery__item-pict
               picture
                 source(type="image/webp"
@@ -93,7 +93,7 @@ section.works
               a(href="#").btn.gallery__btn.gallery__btn--cover
                 +icon("gallery__btn-icon", "link", 14)
                 |Посмотреть сайт         
-          li.gallery__item.mix.shops
+          li.gallery__item.shops
             .gallery__item-pict
               picture
                 source(type="image/webp"
@@ -105,7 +105,7 @@ section.works
               a(href="#").btn.gallery__btn.gallery__btn--cover
                 +icon("gallery__btn-icon", "link", 14)
                 |Посмотреть сайт            
-          li.gallery__item.mix.landing
+          li.gallery__item.landing
             .gallery__item-pict
               picture
                 source(type="image/webp"
@@ -121,6 +121,6 @@ section.works
           li.gallery__item.gap
           li.gallery__item.gap
         .gallery__fail-message Пока тут пусто
-  button.btn.works__btn 
+  button.btn.works__btn
     +icon("works__btn-icon", "more", "16")
     |Показать ещё
