--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -35,6 +35,7 @@
 @import "blocks/_contacts.scss";
 @import "blocks/_gallery.scss";
 @import "blocks/_filters.scss";
+@import "blocks/_main-bg.scss";
 
 
 // layout-секции //
