--- a/app/styles/blocks/_copyright.scss
+++ b/app/styles/blocks/_copyright.scss
@@ -15,3 +15,30 @@
     border-right: 1px solid #ffffff;
   }
 }
+.copyright__link {
+  position: relative;
+  color: #ffffff;
+  font-size: 1.6rem;
+  line-height: 1.8rem;
+  font-family: $font-base;
+  text-decoration: none;
+  transition: 0.2s ease;
+  &::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -0.3rem;
+    z-index: 50;
+    display: block;
+    width: 100%;
+    height: 0.1rem;
+    background-color: $bg-1;
+    opacity: 0;
+    transition: 0.2s ease;
+  }
+  &:hover {
+    &::after {
+      opacity: 1;
+    }
+  }
+}
