--- a/app/styles/layout/_welcome.scss
+++ b/app/styles/layout/_welcome.scss
@@ -4,16 +4,10 @@
 .welcome__bg {
   position: absolute;
   z-index: 50;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  display: block;
-  width: 100%;
-  height: 100%;
-}
-.welcome__bg-img {
-  width: 100%;
-  height: 100%;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
 }
 .welcome__box {
   position: absolute;
