--- a/app/styles/layout/_auth.scss
+++ b/app/styles/layout/_auth.scss
@@ -18,7 +18,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) rotateY(0deg);
-  width: 380px;
+  width: 38rem;
 }
 .auth__box-inner {
   display: flex;
