--- a/app/templates/layout/_about.pug
+++ b/app/templates/layout/_about.pug
@@ -48,7 +48,7 @@ include  ../blocks/_circles
         p.skills__group-name Backend
         ul.skills__list
           li.skills__item
-            span.skills__name Node.js
+            span.skills__name Node.js & npm
             span.skill__circles
               +circles("circle-15")
           li.skills__item
