--- a/app/templates/layout/_footer.pug
+++ b/app/templates/layout/_footer.pug
@@ -4,7 +4,7 @@ include ../blocks/_socials
 footer.footer
     .footer__col.footer__col-left.footer__col-border
       .footer__menu
-        +menu("menu--footer")
+        +menu("footer")
       .footer__socials
         +socials("socials--footer")
     .footer__col
