--- a/app/styles/blocks/_skills.scss
+++ b/app/styles/blocks/_skills.scss
@@ -4,8 +4,7 @@
   @extend %ul-reset;
   display: flex;
   flex-wrap: wrap;
-  margin-left: -1rem;
-  margin-top: -1rem;
+  margin-left: -3rem;
   justify-content: flex-start;
 }
 .skills__group-name {
@@ -18,9 +17,10 @@
 }
 .skills__item {
   position: relative;
-  width: 12rem;
-  height: 12rem;
-  margin: 1rem;
+  width: 11rem;
+  height: 11rem;
+  margin-left: 2rem;
+  margin-bottom: 3rem;
 }
 .skills__name {
   position: absolute;
@@ -31,6 +31,7 @@
   padding: 0 1.4375rem;
   font-family: $font-base;
   font-size: 1.3rem;
+  line-height: 1.3;
   font-weight: 700;
   color: #4e8839;
   text-align: center;
