--- a/app/styles/layout/_header.scss
+++ b/app/styles/layout/_header.scss
@@ -1,6 +1,6 @@
 .header {
   position: relative;
-  z-index: 40;
+  z-index: 80;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -51,6 +51,33 @@
   z-index: 300;
   display: inline-block;
   vertical-align: middle;
+}
+.header__menu {
+  position: relative;
+}
+.header__menu--show .header__menu-wrapper {
+  transform: translateY(0);
+}
+.header__menu--show .header__toggle {
+  position: fixed;
+  right: 2.25rem;
+  top: 2.25rem;
+}
+.header__menu-wrapper {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 250;
+  width: 100vw;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(108, 156, 90, 0.87);
+  transform: translateY(-100%);
+  transition: transform 1s ease;
 }
 .header__bg-triangle {
   position: absolute;
