--- a/app/templates/blocks/_circles.pug
+++ b/app/templates/blocks/_circles.pug
@@ -3,4 +3,5 @@ mixin circles(modificator)
   
   svg.circles(viewbox='0 0 110 110')
     circle.circle__first(r='45', cx='50%', cy='50%', fill='none')
-    circle(class=`circle__second ${modificator}` viewbox='0 0 110 110' r='45', cx='50%', cy='50%', transform='rotate(-90 55 55)')
+    circle(class=`circle__second ${modificator}` viewbox='0 0 110 110' r='45', cx='50%', cy='50%', transform='rotate' +
+    '(-90 55 55)')
