--- a/app/templates/blocks/_menu.pug
+++ b/app/templates/blocks/_menu.pug
@@ -1,7 +1,7 @@
 mixin menu(modificator)
   - var modificator = modificator || "";
     
-  nav(class=`menu ${modificator}`)
+  nav(class=`menu menu--${modificator}`)
     ul.menu__list
       li.menu__item
         a(href="index.html").menu__link На главную
