--- a/app/templates/layout/_footer.pug
+++ b/app/templates/layout/_footer.pug
@@ -1,5 +1,6 @@
 include ../blocks/_menu
 include ../blocks/_socials
+include ../blocks/_copyright
   
 footer.footer
     .footer__col.footer__col-left.footer__col-border
@@ -11,4 +12,4 @@ footer.footer
       .footer__quote
         include ../blocks/_quote
     .footer__col.footer__copyright
-        include ../blocks/_copyright
+      +copyright()
