--- a/app/templates/layout/_welcome.pug
+++ b/app/templates/layout/_welcome.pug
@@ -3,7 +3,7 @@ include ../blocks/_user
 include ../blocks/_copyright
 
 section.welcome
-  .welcome__bg
+  .welcome__bg.parallax-layer
     +main-bg()
   .welcome__box
     .welcome__box-inner
