--- a/app/templates/pages/about.pug
+++ b/app/templates/pages/about.pug
@@ -25,7 +25,7 @@ block content
             include ../blocks/_hamburger
           .header__menu-wrapper
             +menu("vertical")    
-      .header__bottom
+      .header__bottom.parallax-user
         +user("user--main")
       .header__bg-triangle
         +traingle("traingle--about")
