--- a/app/templates/pages/index.pug
+++ b/app/templates/pages/index.pug
@@ -1,5 +1,6 @@
 extends ../basic/_forest
-
+include ../blocks/_main-bg
+  
 block content
 
   .wrapper.wrapper--index
@@ -9,8 +10,8 @@ block content
     |
     |
     //MAIN CONTENT
+    main.content
 
-    main.content.content--index
       include ../layout/_welcome
       //- |
       //- |
