--- a/app/templates/pages/works.pug
+++ b/app/templates/pages/works.pug
@@ -21,6 +21,11 @@ block content
       |
       |
       include ../layout/_feedback
+
+      block picture
+          include ../blocks/_parallax
+      |
+      |
     //END CONTENT
     |
     |
