--- a/app/styles/layout/_content.scss
+++ b/app/styles/layout/_content.scss
@@ -1,8 +1,8 @@
 .content {
+  position: relative;
   background-color: #f8f9f5;
 }
-.content--index {
-  //display: flex;
-}
+
 .content--works {
 }
+
