--- a/app/styles/layout/_welcome.scss
+++ b/app/styles/layout/_welcome.scss
@@ -1,20 +1,23 @@
 .welcome {
-  //position: absolute;
+  position: relative;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
 }
 .welcome__bg {
   position: absolute;
-  z-index: 50;
-  left: 0;
-  top: 0;
-  right: 0;
-  bottom: 0;
+  z-index: 40;
+  top: -3rem;
+  left: -3rem;
+  width: 107%;
+  height: 107%;
+  display: block;
 }
 .welcome__box {
-  position: absolute;
-  z-index: 80;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) rotateY(0deg);
+  position: relative;
+  z-index: 50;
   width: 38rem;
 }
 .welcome__box-inner {
@@ -56,7 +59,7 @@
 .welcome__copyright {
   position: absolute;
   z-index: 70;
-  bottom: 5rem;
+  bottom: 3rem;
   left: 50%;
   transform: translateX(-50%);
   width: 100%;
