--- a/app/templates/layout/_auth.pug
+++ b/app/templates/layout/_auth.pug
@@ -2,7 +2,7 @@ include ../blocks/_main-bg
 include ../blocks/_copyright
   
 section.auth
-  .auth__bg
+  .auth__bg.parallax-layer
     +main-bg()
   .auth__box
     .auth__box-inner
