--- a/app/templates/layout/_feedback.pug
+++ b/app/templates/layout/_feedback.pug
@@ -1,6 +1,9 @@
-section.feedback
 
-    .feedback-form
+
+section.feedback
+    .feedback__bg.no-parallax
+      include ../blocks/_parallaxLeaf
+    .feedback__form
       form.form#feedback-form
         .form__content
           h2.form__title Связаться со мной
