--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -36,6 +36,7 @@
 @import "blocks/_gallery.scss";
 @import "blocks/_filters.scss";
 @import "blocks/_main-bg.scss";
+@import "blocks/_parallaxLeaf.scss";
 
 
 // layout-секции //
