--- a/app/styles/layout/_auth.scss
+++ b/app/styles/layout/_auth.scss
@@ -1,12 +1,11 @@
 .auth__bg {
   position: absolute;
-  z-index: 50;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
+  z-index: 40;
+  top: -3rem;
+  left: -3rem;
+  width: 107%;
+  height: 107%;
   display: block;
-  width: 100%;
-  height: 100%;
 }
 .auth__bg-img {
   width: 100%;
