--- a/app/templates/layout/_feedback.pug
+++ b/app/templates/layout/_feedback.pug
@@ -22,6 +22,6 @@ section.feedback
           a(href="#" tabindex="4").btn.form__btn Отправить
           a(href="#" tabindex="5").btn.form__btn Очистить
     .feedback__arrow
-      a(href="#").arrow-down Стрелка вверх
+      a(href="#").arrow-down.arrow-down--bot.js-arrow-up Стрелка вверх
         +icon("arrow__icon", "arrow-down", 26)
     
