--- a/app/templates/layout/_header.pug
+++ b/app/templates/layout/_header.pug
@@ -11,7 +11,7 @@ header.header
     .header__socials
       +socials()
     .header__arrow
-      a(href="#").arrow-down Стрелка вниз
+      a(href="#").arrow-down.js-arrow-down Стрелка вниз
         +icon("arrow__icon", "arrow-down", 26)
     .header__menu
       .header__toggle
