--- a/app/templates/pages/index.pug
+++ b/app/templates/pages/index.pug
@@ -2,7 +2,7 @@ extends ../basic/_forest
 include ../blocks/_main-bg
   
 block content
-
+  include ../blocks/_preloader
   .wrapper.wrapper--index
     //HEADER
     //include ../layout/_header
