--- a/app/styles/blocks/_contacts.scss
+++ b/app/styles/blocks/_contacts.scss
@@ -35,6 +35,10 @@
   margin-right: 1rem;
   line-height: 0;
   fill: $accent;
+  svg {
+    width: 2.4rem;
+    height: 2.4rem;
+  }
 }
 .contacts__text {
   display: inline-block;
