--- a/app/styles/blocks/_wrapper.scss
+++ b/app/styles/blocks/_wrapper.scss
@@ -2,9 +2,10 @@
   position: relative;
   display: flex;
   flex-flow: column nowrap;
-  //height: 100%;
+  min-height: 100%;
   //height: 100vh;
-  overflow-x: hidden;
+  //overflow-x: hidden;
+  overflow: hidden;
   &--index {
     height: 100vh;
   }
