--- a/app/styles/layout/_adress.scss
+++ b/app/styles/layout/_adress.scss
@@ -1,22 +1,21 @@
 .adress {
   position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .adress__map {
   width: 100%;
   min-height: 1100px;
+  height: 100vh;
   position: relative;
   overflow: hidden;
-  background-image: url("../img/content/map.jpg");
+  background-image: url("../../img/content/map.jpg");
   @extend %cover;
 }
 .adress__block {
   position: absolute;
   z-index: 50;
-  top: 50%;
-  left: 50%;
-  margin-left: -19rem;
-  margin-top: -19rem;
-  transform: translateY(-50%);
 }
 
 @include tablets-df {
