--- a/app/styles/layout/_feedback.scss
+++ b/app/styles/layout/_feedback.scss
@@ -7,17 +7,16 @@
   align-items: center;
   justify-content: center;
   flex-flow: column nowrap;
-
 }
 .feedback__bg {
   position: absolute;
   z-index: -1;
-  top: 0;
-  left: 0;
-  right: 0;
   bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   background-color: #dde3df;
-  overflow-y: hidden;
+  overflow: hidden;
   @extend %cover;
   &.no-parallax {
     background-image: url("../img/bg/forest-bottom@1x.png");
@@ -48,11 +47,13 @@
 
 @include tablets-df {
   .feedback {
+    min-height: 80rem;
     height: auto;
-    min-height: 90rem;
   }
 }
 @include phones-df {
-
+  .feedback {
+    //min-height: 600px;
+  }
 
 }
